fix resize and remove scrollbars on fullscreen

--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,12 @@
 	padding: 0;
 }
 
-body{
+html, body{
+	width:100%;
+	height:100%;
 	font-family: Arial, Helvetica, sans-serif;
 	background: #444;
+	overflow: hidden;
 }
 
 canvas {
@@ -15,6 +18,7 @@ canvas {
 	left: 0;
 	z-index: 1;
 	cursor: default;
+	display: block;
 }
 
 .header h1, .button{
